--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 html {
@@ -137,6 +143,9 @@ main {
 }
 .btn--hold {
   top: 46.1rem;
+}
+.disable {
+  display: none;
 }
 
 .btn:active {
